scrollbar fix

--- a/Work 1/index.css
+++ b/Work 1/index.css
@@ -174,3 +174,10 @@ a.codewars-link:hover {
     color: black;
     box-shadow:0px 0px 0px 0.2vw black inset;
 }
+
+html::-webkit-scrollbar {
+    display: none;
+}
+html {
+    overflow: hidden;
+}
